Adjust GF join, altar limits, and bait rarity